--- a/app/src/main/res/layout/fragment_landing_page3.xml
+++ b/app/src/main/res/layout/fragment_landing_page3.xml
@@ -24,22 +24,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="64dp"
-        android:text="Tuliskan namamu di bawah" />
+        android:text="Persiapkan Dirimu!" />
 
-    <EditText
-        android:id="@+id/et_landing3"
-        android:layout_width="256dp"
-        android:inputType="text"
-        android:background="#fff"
-        android:textSize="16sp"
-        android:layout_height="wrap_content"
-        android:hint="nama"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_landing3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:textColor="#000000"
-        />
 
     <Button
         android:id="@+id/btn_go"
@@ -47,11 +33,11 @@
         android:layout_height="wrap_content"
         android:background="#758BDC"
         android:textColor="#fff"
-        app:layout_constraintTop_toBottomOf="@id/et_landing3"
+        app:layout_constraintTop_toBottomOf="@id/tv_landing3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
         android:textStyle="bold"
-        android:text="SUBMIT"/>
+        android:text="Next"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
